--- a/package.json
+++ b/package.json
@@ -2,12 +2,8 @@
   "name": "pub-sub",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
-  "author": "",
+  "author": "Mickey J",
   "license": "ISC",
   "devDependencies": {
     "colors": "^1.1.2"
